Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35637

In certain cases, windeployqt can fail to pull in QtQuick even though there are QML dependencies on it

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.2.1
    • None
    • None
    • f874e6ff3b9fc28ec6653ca4226455fa3c18fe7b

    Description

      A pure QML app's main.cpp often looks like this:

      #include <QGuiApplication>
      #include <QQmlApplicationEngine>
      
      int main(int argc, char *argv[])
      {
          QGuiApplication app(argc, argv);
      
          QQmlApplicationEngine engine("main.qml");
      
          return app.exec();
      }
      

      In this case, QtQuick is not linked directly. However, the QML scanner will still run, possibly pulling in plugins which do link to QtQuick. Those plugins won't be able to load, so perhaps a dependency check should be done on them as well.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            andrew.knight Andrew Knight
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes