windeployqt: Fix scanning of QML-plugins.

Task-number: QTBUG-35637

Change-Id: I0f5a3df3b9be83f3d153135bbca168bfc9005696
Reviewed-by: Andrew Knight <andrew.knight@digia.com>